namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: vss
---
apiVersion: v1
kind: Namespace
metadata:
  name: infra
